--- a/templates/good.html
+++ b/templates/good.html
@@ -2,7 +2,7 @@
   <style>
     body{
       background-image: url(test.jpg);
-      background: rgb(164, 226, 20);            
+      background: rgb(3, 133, 72);            
     }
 
       .block {
@@ -31,10 +31,10 @@
   </style>            
 
   <body>
-    <h1 style="font-size: 600%; font-family: 'Courier New', Courier, monospace;font-weight: bolder; text-align: center;color:rgba(255, 124, 1, 0.705);" ><u>🍷Quality Result🍷</u></h1>
-    <h3 style="font-size: 350%; font-family: 'Courier New', Courier, monospace;font-weight: bolder; text-align: center;color:rgba(255, 1, 1, 0.705);" >🥳Great Quality🥳</h3>
-    <p style="font-size: 350%; font-family: 'Courier New', Courier, monospace;font-weight: bolder; text-align: center;color:rgba(48, 15, 236, 0.705);" >🍷It provides antioxidants, may promote longevity, and can help protect against heart disease and harmful inflammation, among other benefits.🍷</p>
-    <h1 style="font-size: 600%; font-family: 'Courier New', Courier, monospace;font-weight: bolder; text-align: center;color:rgba(255, 124, 1, 0.705);" ><u>🍷Cheers🍷</u></h1>
+    <h1 style="font-size: 600%; font-family: 'Courier New', Courier, monospace;font-weight: bolder; text-align: center;color:rgba(255, 124, 1, 0.952);" >🍷<u>Quality Result</u>🍷</h1>
+    <h3 style="font-size: 350%; font-family: 'Courier New', Courier, monospace;font-weight: bolder; text-align: center;color:rgb(255, 1, 1);" >🥳Great Quality🥳</h3>
+    <p style="font-size: 350%; font-family: 'Courier New', Courier, monospace;font-weight: bolder; text-align: center;color:rgb(48, 15, 236);" >🍷It provides antioxidants, may promote longevity, and can help protect against heart disease and harmful inflammation, among other benefits.🍷</p>
+    <h1 style="font-size: 600%; font-family: 'Courier New', Courier, monospace;font-weight: bolder; text-align: center;color:rgba(255, 124, 1, 0.952);" >🍷<u>Cheers</u>🍷</h1>
     <form action="/">
       <input type="submit" value="🍷Go Back🍷" class="block">
     </form>
