--- a/templates/bad.html
+++ b/templates/bad.html
@@ -2,7 +2,7 @@
   <style>
     body{
       background-image: url(test.jpg);
-      background: rgb(115, 219, 29);            
+      background: rgb(3, 133, 72);            
     }
 
       .block {
@@ -31,9 +31,9 @@
   </style>            
 
   <body>
-    <h1 style="font-size: 600%; font-family: 'Courier New', Courier, monospace;font-weight: bolder; text-align: center;color:rgba(255, 124, 1, 0.705);" ><u>🍷Quality Result🍷</u></h1>
-    <h3 style="font-size: 350%; font-family: 'Courier New', Courier, monospace;font-weight: bolder; text-align: center;color:rgba(255, 1, 1, 0.705);" >☹️Bad Quality☹️</h3>
-    <p style="font-size: 350%; font-family: 'Courier New', Courier, monospace;font-weight: bolder; text-align: center;color:rgba(48, 15, 236, 0.705);" >🍷Expired alcohol doesn't make you sick. If you drink liquor after it's been open for more than a year, you generally only risk a duller taste. Spoiled wine usually tastes vinegary or nutty but isn't harmful🍷</p>
+    <h1 style="font-size: 600%; font-family: 'Courier New', Courier, monospace;font-weight: bolder; text-align: center;color:rgba(255, 124, 1, 0.952);" >🍷<u>Quality Result</u>🍷</h1>
+    <h3 style="font-size: 350%; font-family: 'Courier New', Courier, monospace;font-weight: bolder; text-align: center;color:rgb(255, 1, 1);" >☹️Bad Quality☹️</h3>
+    <p style="font-size: 350%; font-family: 'Courier New', Courier, monospace;font-weight: bolder; text-align: center;color:rgb(48, 15, 236);" >🍷Expired alcohol doesn't make you sick. If you drink liquor after it's been open for more than a year, you generally only risk a duller taste. Spoiled wine usually tastes vinegary or nutty but isn't harmful🍷</p>
     <form action="/">
       <input type="submit" value="🍷Go Back🍷" class="block">
 
